// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "red",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "green",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "blue",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "purple",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "brown",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "yellow",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with activePower and items) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#00ff00",
            "fontFamily": "telegrama_raw",
            "fontSize": 6,
            "marginLeft": 9,
            "marginTop": 15,
          }
        }
      >
        PowerName | |==------------------------------------------------|   2% 00:00:09
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "red",
                "borderColor": "red",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "green",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "blue",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "purple",
                "borderColor": "purple",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "brown",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "yellow",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with activePower) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#00ff00",
            "fontFamily": "telegrama_raw",
            "fontSize": 6,
            "marginLeft": 9,
            "marginTop": 15,
          }
        }
      >
        PowerName | |==------------------------------------------------|   2% 00:00:09
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "red",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "green",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "blue",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "purple",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "brown",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "yellow",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with items) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderColor": "black",
            "borderRadius": 0,
            "borderWidth": 1,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "resizeMode": "contain",
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "telegrama_raw",
            "paddingRight": 30,
            "paddingTop": 4,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "red",
                "borderColor": "red",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "green",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "blue",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "purple",
                "borderColor": "purple",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "brown",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderColor": "yellow",
                "borderWidth": 1,
                "height": 9,
                "margin": 4,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 9,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
